<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">

    <TextView
        android:id="@+id/trackPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/trackPosition"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="75"
        android:orientation="vertical">
        <TextView
            android:id="@android:id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/album_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textViewArtistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/trackArtistName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorGray" />
    </LinearLayout>


    <TextView
        android:id="@+id/textViewTrackDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/trackDuration"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorGray" />

</LinearLayout>