<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.example.home.deezertest.activity.AlbumActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTrack"
        style="@style/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="start|top"
                android:singleLine="true"
                android:text="@string/toolbar_album_name"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/toolbar_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="start|bottom"
                android:singleLine="true"
                android:text="@string/toolbar_artist_name"
                android:textColor="@color/colorGray"
                android:textSize="10sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@android:id/icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/default_user_cover" />

    <TextView
        android:id="@+id/textViewAlbumVolum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:ellipsize="end"
        android:paddingTop="6dp"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:text="@string/albumVolum"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="39" />

</LinearLayout>